<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_input_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/amount"
            app:prefixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/type">

            <AutoCompleteTextView
                android:id="@+id/et_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/category">

            <AutoCompleteTextView
                android:id="@+id/et_transaction_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/date"
            android:clickable="true"
            android:focusable="true"
            app:endIconDrawable="@drawable/ic_date"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_transaction_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/notes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_transaction_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ImageView для предпросмотра чека -->
        <ImageView
            android:id="@+id/iv_receipt_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/receipt_image"
            android:scaleType="fitCenter"
            android:layout_marginTop="12dp"
            android:visibility="gone" />

        <!-- Кнопка для изменения чека -->
        <Button
            android:id="@+id/btn_change_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Изменить чек"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunito_semibold"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/btn_text" />

        <!-- Кнопка для удаления чека -->
        <Button
            android:id="@+id/btn_remove_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Удалить чек"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_semibold"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/btn_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>